--- a/.github/workflows/learn-github-actions.yml
+++ b/.github/workflows/learn-github-actions.yml
@@ -5,9 +5,11 @@ jobs:
   check-bats-version:
     runs-on: ubuntu-latest
     steps:
+      - run: pwd && ls -l
       - uses: actions/checkout@v3
       - uses: actions/setup-node@v3
         with:
           node-version: '14'
       - run: npm install -g bats
       - run: bats -v
+      - run: pwd && ls -l
